Fix horizontal alignment on larger screens

--- a/launcher/assets/css/styles.css
+++ b/launcher/assets/css/styles.css
@@ -150,7 +150,7 @@ body {
   .slab-launcher__description {
     font-size: 1.3rem;
     line-height: 2.6rem;
-    margin: 3rem 0;
+    margin: 3rem auto;
   }
 }
 
